Fix waypoint augmenter to use mutable list